[B] Correct section-category-label z-index
Fixes #1637

--- a/client/src/theme/_z-stack.scss
+++ b/client/src/theme/_z-stack.scss
@@ -79,6 +79,10 @@
   z-index: 100;
 }
 
+.section-category-label.fixed {
+  z-index: 50;
+}
+
 .dropdown-nav {
   z-index: 50;
 }
